--- a/menu2.html
+++ b/menu2.html
@@ -29,17 +29,17 @@
         <div>
             <img src="img/img1.png" alt="Foto com os amigos" width="200">
             <img src="img/img2.jpg" alt="Foto na igreja" width="185">
-            <img src="img/img3.png" alt="Foto com meu avô e meu pai" width="150">
+            <img src="img/img3.png" alt="Foto com meu avô e meu pai" width="180">
         </div>
     </section>
 
     <section>
-        <h2>Minhas foto1.jpgciais</h2>
+        <h2>Redes Sociais</h2>
         <ul>
-            <li><a href="https://facebook.com/seuusuario" target="_blank">Facebook</a></li>
-            <li><a href="https://instagram.com/seuusuario" target="_blank">Instagram</a></li>
-            <li><a href="https://linkedin.com/in/seuusuario" target="_blank">LinkedIn</a></li>
-        </ul>
+            <li><button><a href="https://facebook.com/seuusuario" target="_blank">Facebook</a></li>
+            <li><button><a href="https://instagram.com/seuusuario" target="_blank">Instagram</a></li>
+                <li><button><a href="https://linkedin.com/in/seuusuario" target="_blank">LinkedIn</a></li>
     </section>
 </body>
 </html>
+
