--- a/menu2.html
+++ b/menu2.html
@@ -35,10 +35,9 @@
 
     <section>
         <h2>Redes Sociais</h2>
-        <ul>
-            <li><button><a href="https://facebook.com/seuusuario" target="_blank">Facebook</a></li>
-            <li><button><a href="https://instagram.com/seuusuario" target="_blank">Instagram</a></li>
-                <li><button><a href="https://linkedin.com/in/seuusuario" target="_blank">LinkedIn</a></li>
+        <ul class="botoes">
+            <li><button><a href="https://instagram.com/caslugms" target="_blank">Instagram</a></li>
+            <li><button><a href="https://linkedin.com/in/caslugms" target="_blank">LinkedIn</a></li>
     </section>
 </body>
 </html>
