arrumei meus menus

--- a/menu2.html
+++ b/menu2.html
@@ -11,10 +11,9 @@
         <ul class="menu">
             <li><a href="menu1.html">Início</a></li>
             <li><a href="menu2.html">Sobre</a></li>
-            <li><a href="menu3.html">Serviços</a></li>
-            <li><a href="menu4.html">Produtos</a></li>
+            <li><a href="menu3.html">Hobbies</a></li>
+            <li><a href="menu4.html">Recomendações de Música</a></li>
             <li><a href="menu5.html">Contato</a></li>
-            <li><a href="menu6.html">Configurações</a></li>
         </ul>
     </nav>
 
