--- a/menu3.html
+++ b/menu3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Serviços</title>
+    <title>Hobbies</title>
     <link rel="stylesheet" href="menu.css">
 </head>
 <body>
@@ -11,11 +11,20 @@
         <ul class="menu">
             <li><a href="menu1.html">Início</a></li>
             <li><a href="menu2.html">Sobre</a></li>
-            <li><a href="menu3.html">Serviços</a></li>
-            <li><a href="menu4.html">Produtos</a></li>
+            <li><a href="menu3.html">Hobbies</a></li>
+            <li><a href="menu4.html">Recomendações de Música</a></li>
             <li><a href="menu5.html">Contato</a></li>
-            <li><a href="menu6.html">Configurações</a></li>
         </ul>
     </nav>
+    <section>
+        <h1>Meus Hobbies</h1>
+        <p>Aqui estão algumas das coisas que gosto de fazer no meu tempo livre:</p>
+        <ul>
+            <li>Ler livros</li>
+            <li>Ouvir música</li>
+            <li>Jogar videogame</li>
+            <li>Assistir séries e filmes</li>
+            <li>Passar tempo com amigos</li>
+        </ul>
+    </section>
 </body>
-</html>
