--- a/menu4.html
+++ b/menu4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Produtos</title>
+    <title>Recomendações de Música</title>
     <link rel="stylesheet" href="menu.css">
 </head>
 <body>
@@ -11,11 +11,22 @@
         <ul class="menu">
             <li><a href="menu1.html">Início</a></li>
             <li><a href="menu2.html">Sobre</a></li>
-            <li><a href="menu3.html">Serviços</a></li>
-            <li><a href="menu4.html">Produtos</a></li>
+            <li><a href="menu3.html">Hobbies</a></li>
+            <li><a href="menu4.html">Recomendações de Música</a></li>
             <li><a href="menu5.html">Contato</a></li>
-            <li><a href="menu6.html">Configurações</a></li>
         </ul>
     </nav>
+
+    <section>
+        <h1>Minhas Recomendações de Música</h1>
+        <p>Aqui estão algumas músicas cristãs brasileiras que gosto e que você pode gostar também:</p>
+        <ul>
+            <li><strong>1. A Casa é Sua - Palavrantiga</strong> - Uma música de louvor com um ritmo contagiante.</li>
+            <li><strong>2. Deus de Promessas - Davi Sacer</strong> - Uma canção que afirma a fidelidade de Deus em nossas vidas.</li>
+            <li><strong>3. Ninguém Explica Deus - Preto no Branco</strong> - Uma música que expressa a grandiosidade de Deus.</li>
+            <li><strong>4. Teu Amor - Ana Nóbrega</strong> - Uma linda canção que fala sobre o amor de Deus.</li>
+            <li><strong>5. Ousado Amor - Isaias Saad</strong> - Uma música profunda sobre o amor imensurável de Deus por nós.</li>
+        </ul>
+    </section>
 </body>
 </html>
