--- a/menu5.html
+++ b/menu5.html
@@ -11,11 +11,16 @@
         <ul class="menu">
             <li><a href="menu1.html">Início</a></li>
             <li><a href="menu2.html">Sobre</a></li>
-            <li><a href="menu3.html">Serviços</a></li>
-            <li><a href="menu4.html">Produtos</a></li>
+            <li><a href="menu3.html">Hobbies</a></li>
+            <li><a href="menu4.html">Recomendações de Música</a></li>
             <li><a href="menu5.html">Contato</a></li>
-            <li><a href="menu6.html">Configurações</a></li>
         </ul>
     </nav>
+
+    <section>
+        <h1>Contato</h1>
+        <p><strong>Telefone:</strong> 45999005656</p>
+        <p><strong>E-mail:</strong> <a> Lukinhasx248@gmail.com</a></p>
+    </section>
 </body>
 </html>
